ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: mytimeingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mytimeservice.com
    http:
      paths:
      - path: /
        backend:
          serviceName: mytimeservice
          servicePort: 8080
